--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -27,22 +27,19 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   @extend .headlinestyle;
   font-size: $h1;
-  letter-spacing: -2px;
+  letter-spacing: .20rem;
   @include desktop { font-size: $h2; }
 }
 h2 {
   @extend .headlinestyle;
   font-size: $h3;
-  letter-spacing: -1px;
   @include desktop {
     font-size: $h2;
-    letter-spacing: -2px;
   }
 }
 h3 {
   @extend .headlinestyle;
   font-size: $h3;
-  letter-spacing: -1.2px;
 }
 h4 { @extend .subheadline; }
 h5 { @extend .subheadline; }
