Add field to display events on speaker page

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -109,7 +109,7 @@ section.two_columns article, section.three_columns article {
 
 
 a {
-  color: $text_mute;
+  color: $secondary;
   outline: none;
 	text-decoration: none;
 }
