--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -33,7 +33,7 @@ $blue   : #274080;
 $yellow : #ffaf45;
 $teal   : #439996;
 $gray   : #f7f7f7;
-$orange : #8f5030;
+$orange : #EF5B44;
 
 
 $gray_hover  : darken($gray, 5%);
@@ -59,7 +59,7 @@ $h3    : 22px;
 $h4    : 36px;
 $h5    : 26px;
 $h6    : 14px;
-$p     : 18px;
+$p     : 18px; 
 $small : 14px;
 $caps  : 12px;
 
