--- a/scss/modules/_menu.scss
+++ b/scss/modules/_menu.scss
@@ -15,13 +15,14 @@ $sub_menu_width: ($pad*24);
 a.logo {
 	$real_width    : 1400px;
 	$real_height   : 577px;
-	$height        : 20px;
+	$height        : 40px;
 	$width         : (($real_width*$height)/$real_height);
 	text-indent: -9999px;
-	background: url('../images/greenlogo.svg');
+	background: url('../images/bbd-orange.svg');
+	background-repeat: no-repeat;
 	width: $width;
 	height: $height;
-	background-size: $width $height;
+	// background-size: $width $height;
 	display: none;
 	&.mobile {
 		display: block;
@@ -89,7 +90,8 @@ body:not(.scrolled):not(.no_hero)  {
 		}
 	}
 	a.logo {
-		background: url('../images/whitelogo.svg');
+		background: url('../images/bbd-white.svg');
+		background-repeat: no-repeat;
 	}
 	&.menu_is_open {
 		.nav_back { opacity: 0; }
