--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,6 +5,15 @@ footer {
 		position: relative;
 		z-index: 2;
 	}
+	.footer-logo {
+		> img {
+			margin: 0 auto;
+			width: 150px;
+		}
+	}
+	ul.media {
+		margin-top: 20px;
+	}
 	section.footer {
 		padding: ($pad*8) ($pad*2);
 	}
