--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -33,6 +33,9 @@ section.image_grid {
 	a { @extend .image_expand; }
 	h4 { margin: $pad 0px 0px 0px; }
 	article:last-child p { margin-bottom: 0px; }
+	img {
+		margin: 0 auto;
+	}
 	&.full_width {
 		padding: 0px;
 		article { max-width: none; }
@@ -57,8 +60,8 @@ section.image_grid {
 			z-index: 1;
 			img {
 				width: 100%;
-			  height: 100%;
-			  object-fit: cover;
+				height: 100%;
+				object-fit: cover;
 				transform: scale(1.01);
 			}
 			&:after {
@@ -100,6 +103,7 @@ section.image_grid {
 	}
 	.image_description h4 {
 		text-align: center;
+		margin-bottom: $pad*2;
 	}
 }
 
