--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -72,7 +72,7 @@ header {
 		@extend .center;
 		position: relative;
 		z-index: 5;
-		max-width: $onecol;
+		max-width: 800px;
 		margin: 0 auto;
 	}
 	h1 {
