Increase menu font size for desktop view

--- a/scss/modules/_menu.scss
+++ b/scss/modules/_menu.scss
@@ -275,6 +275,7 @@ nav.main {
 			margin-right: ($pad);
 			a:not(.logo) {
 				text-align: left;
+				font-size: 15px;
 				&:hover { opacity: .8; }
 			}
 			> li {
